fixed blurry zoom issue

--- a/static/css/test.css
+++ b/static/css/test.css
@@ -1,3 +1,5 @@
+
+
 body {
   min-height: 100vh;
   margin: 0;
@@ -5,4 +7,8 @@ body {
   align-items: center;
   justify-content: center;
   background-color: grey;
+}
+
+#canvas {
+    image-rendering: pixelated;
 }
